# stm32-boilerplate

./: .gitignore  .screenrc  Cargo.toml  Makefile  logtty  print-stuff
src/: main.rs
